@@ -332,3 +332,6 @@ XXXXXXXXXX: Version 0.0.8-ALPHA
 - display small cover: Appeared at left border instead at the right side
 - sqlite3: muggle segfaulted in special situations
 - fix segfault if the cache directory has a long path
+- if at muggle start we land in an empty list because the saved state does not
+  match the database, it could happen that we never get anything displayed until
+  we delete muggle.state and restart muggle. Now muggle goes up to the parent level
